Fri Apr  9 08:23:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_Context.idl
        * ccm/Security.idl
        * ciao/Contexts/Context_Impl_Base.cpp
        * ciao/Contexts/Context_Impl_Base.h
          Disable more features with LwCCM

Fri Apr  9 08:07:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_Navigation.idl:
        * ccm/CCM_PrimaryKeyBase.idl:
        * ccm/CCM_Receptacle.idl:
          Disable more types and methods with LwCCM

        * ciao/ComponentServer/Client_init.cpp
        * ciao/Servants/Connector_Servant_Impl_Base.cpp
        * ciao/Servants/Connector_Servant_Impl_Base.h
        * ciao/Servants/Connector_Servant_Impl_Utils_T.cpp
        * ciao/Servants/Servant_Impl_Base.cpp
        * ciao/Servants/Servant_Impl_Base.h
          Disabled several methods, we need to reimplement
          some methods for LwCCM, they use regular CCM types. Tagged
          these methods as a todo

        * tests/IDL_Test/IDL3_Plus/KitchenSink.idl:
          Disabled part of this test with LwCCM

Fri Apr  9 07:32:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_HomeRegistration.idl:
        * ccm/CCM_ProxyHomeRegistration.idl:
          Disable these interfaces with LwCCM

Thu Apr  8 19:03:20 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * examples/Hello/Sender/Sender_exec.cpp:
        * examples/Hello/Sender/Sender_exec.h:

          Updated hand-crafted executor to reflect the additional attriutes
          added in

          Wed Apr  7 16:48:30 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

Thu Apr  8 12:02:35 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QosProfile/Component/QosProfile_Test_Component.idl:
          In preparation of an upcoming fix.

Thu Apr  8 11:28:53 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/VariousTopicsState/Receiver/VTopics_Receiver.idl: