@@ -1,3 +1,8 @@
+Fri Apr  9 08:48:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
+          Throw exceptions by default
+
 Fri Apr  9 08:23:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ccm/CCM_Context.idl
